Salesforce/main/default/main/default/objects/Pagamento__c/fields/Fecha_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_pagamento__c</fullName>
    <label>Fecha pagamento</label>
    <type>Date</type>
</CustomField>