Salesforce/main/default/main/default/objects/Pagamento__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Importe(r$)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>