Salesforce/main/default/main/default/objects/Pagamento__c/fields/Importe_rs__c.field-meta.xml
<CustomField>
    <fullName>Importe_rs__c</fullName>
    <description>Importe del pagamento convertido enU$S</description>
    <formula>Importe__c   / Tipo_de_Cambio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe del pagamento convertido en U$S</inlineHelpText>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>