Salesforce/main/default/main/default/objects/Pagamento__c/fields/Tipo_de_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pagamento__c</fullName>
    <label>Tipo de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pagamento em dia</fullName>
            </value>
            <value>
                <fullName>Pagamento atrasado até 31/12</fullName>
            </value>
            <value>
                <fullName>Pagamento atrasado após 31/12</fullName>
            </value>
            <value>
                <fullName>Atualização de Comercialização</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>